chore(ci): Move podSpec to a separate file
related to #SRE-155